contact from in progress fix overflow2

--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -35,7 +35,7 @@
     .left {
       flex: 1;
       img {
-        height: 400px;
+        height: 380px;
         overflow: hidden;
       }
     }
@@ -84,7 +84,7 @@
     }
   }
   .footer {
-    margin-top: 100px;
+    margin-top: 70px;
     width: 100vw;
     height: 12%;
     background-color: $darkColor;
